@@ -8,10 +8,9 @@
 # and thus you'll know about Linux's capability support.
 # [If you don't know about libcap, the sources for it are here:
 #
-#   ftp://linux.kernel.org/pub/linux/libs/security/linux-privs/kernel-2.2/
+#   http://linux.kernel.org/pub/linux/libs/security/linux-privs/
 #
-# despite evidence to the contrary, the 2-2 library should be used for 2.3
-# kernels too.]
+# .]
 #
 # Here are some sample lines (remove the preceding '#' if you want to
 # use them
@@ -23,7 +22,7 @@
 # cap_net_raw,cap_fowner	luser
 
 ## 'everyone else' gets no inheritable capabilities
-# none  *
+none  *
 
 ## if there is no '*' entry, all users not explicitly mentioned will
 ## get all available capabilities. This is a permissive default, and
